Styling update to make disabled forms more readable

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,3 +5,16 @@
 // Variables
 @import "bulma";
 @import "bulma-extensions";
+
+//Customisation
+input[type=text]:disabled {
+     background: none;
+     color: black;
+}
+
+input[type=number]:disabled {
+     background: none;
+     color: black;
+}
+
+
